--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.3",
+    "d3": "~3.5.3",
+    "moment": "~2.9.0",
+    "less.js": "~2.2.0",
+    "reset-css": "~2.0.20110126"
+  }
 }
