--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "d3": "~3.5.3",
     "moment": "~2.9.0",
     "less.js": "~2.2.0",
-    "reset-css": "~2.0.20110126"
+    "reset-css": "~2.0.20110126",
+    "underscore": "~1.7.0"
   }
 }
